--- a/package.json
+++ b/package.json
@@ -59,16 +59,15 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
-    "@types/mockery": "^1.4.29",
     "@types/node": "^14.0.13",
     "@types/sinon": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "3.3.0",
     "@typescript-eslint/parser": "3.3.0",
     "chai": "^4.2.0",
     "eslint": "7.3.0",
-    "mocha": "^8.0.1",
-    "mockery": "^2.1.0",
+    "mocha": "^11.1.0",
     "nyc": "^15.1.0",
+    "rewiremock": "^3.14.5",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.2",
     "source-map-support": "^0.5.19",
